---
source: libs/config/tests/rapify.rs
expression: config
---
Config(
    [
        Spanned {
            inner: Class(
                Spanned {
                    inner: External {
                        name: Spanned {
                            inner: Ident(
                                "test",
                            ),
                            span: 0..0,
                        },
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "thing",
                            ),
                            span: 0..0,
                        },
                        parent: Some(
                            Spanned {
                                inner: Ident(
                                    "test",
                                ),
                                span: 0..0,
                            },
                        ),
                        properties: [
                            Spanned {
                                inner: Entry {
                                    name: Spanned {
                                        inner: Ident(
                                            "value",
                                        ),
                                        span: 0..0,
                                    },
                                    value: Spanned {
                                        inner: Number(
                                            Int32(
                                                12,
                                            ),
                                        ),
                                        span: 0..0,
                                    },
                                    expected_array: false,
                                },
                                span: 0..0,
                            },
                        ],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "thing2",
                            ),
                            span: 0..0,
                        },
                        parent: None,
                        properties: [
                            Spanned {
                                inner: Class(
                                    Spanned {
                                        inner: External {
                                            name: Spanned {
                                                inner: Ident(
                                                    "things",
                                                ),
                                                span: 0..0,
                                            },
                                        },
                                        span: 0..0,
                                    },
                                ),
                                span: 0..0,
                            },
                        ],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "another",
                            ),
                            span: 0..0,
                        },
                        parent: Some(
                            Spanned {
                                inner: Ident(
                                    "thing",
                                ),
                                span: 0..0,
                            },
                        ),
                        properties: [],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
        Spanned {
            inner: Class(
                Spanned {
                    inner: Local {
                        name: Spanned {
                            inner: Ident(
                                "yet",
                            ),
                            span: 0..0,
                        },
                        parent: Some(
                            Spanned {
                                inner: Ident(
                                    "another",
                                ),
                                span: 0..0,
                            },
                        ),
                        properties: [
                            Spanned {
                                inner: Class(
                                    Spanned {
                                        inner: Local {
                                            name: Spanned {
                                                inner: Ident(
                                                    "things",
                                                ),
                                                span: 0..0,
                                            },
                                            parent: None,
                                            properties: [],
                                            err_missing_braces: false,
                                        },
                                        span: 0..0,
                                    },
                                ),
                                span: 0..0,
                            },
                        ],
                        err_missing_braces: false,
                    },
                    span: 0..0,
                },
            ),
            span: 0..0,
        },
    ],
)
